--- a/productsdetails.html
+++ b/productsdetails.html
@@ -18,17 +18,17 @@
 <body>
     <div class="container">
         <div class="navbar">
-            <a href="chintu.html">
+            <a href="index.html">
                 <div class="logo">
                     <h1>CHINTU <span>STORE</span></h1>
                 </div>
             </a>
             <nav>
                 <ul id="menuItems">
-                    <li><a href="chintu.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="product.html">All products</a></li>
                     <li><a href="#">Contact</a></li>
-                    <li><a href="#">Account</a></li>
+                    <li><a href="account.html">Account</a></li>
                 </ul>
             </nav>
             <a href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a>
